--- a/ES6/函数.md
+++ b/ES6/函数.md
@@ -64,3 +64,50 @@ arra == arr  false
 const num = getNum(10);
 console.log(Math.max(...num),Math.min(...num), num);
  ```
+ ---
+ ##### 柯里化 用固定的某个函数的前面的参数，得到一个新的函数，新的函数调用时，接受剩余的参数  
+ ```
+ function cal(a, b, c, d) {
+    return a + b * c - d;
+}
+function curry(fn, ...args){
+    return function (...subArgs) {
+        const allArgs = [...args, ...subArgs];
+        if(allArgs.length >= fn.length){
+        //    参数数量够了
+        return fn(...allArgs);
+        }else{
+        //    参数不够
+        return curry(fn, ...allArgs);
+        }
+    }
+}
+const newCal = curry(cal, 1, 2);
+console.log(newCal(3, 4))
+ ```  
+---
+##### 判断是否使用了new的方式来调用函数
+> new.target 得到的是：如果没有使用new来调用函数，得到的是undefined,如果使用了new来调用函数，得到的是new后面函数关键字本身
+```
+function Person(name, age) {
+    // new.target
+    if(new.target === undefined) {
+        throw new Error('该函数没有使用new来调用')
+    }
+    this.name = name;
+    this.age = age;
+    console.log(new.target)
+}
+let oPerson = new Person('小王', 15);
+```
+ ---
+ ##### 箭头函数 () => {}
+ 1. 通过对象调用函数，this指向对象
+ 2. 直接调用函数，this指向全局对象
+ 3. 通过new 调用， this指向新创建的对象
+ 4. 如果通过apply、call、bind， this指向指定的对象
+ 5. 如果是DOM事件，this指向DOM
+ **通俗的来讲，this指向它父级最近有this的对象**
+ ```
+1. 
+ ```
