--- a/ES6/函数.md
+++ b/ES6/函数.md
@@ -1,6 +1,6 @@
 ### 函数
 ##### 参数默认值(该函数自动变成严格模式)
-```
+```js
 function sum(a = 0, b = 1, c = 3){
     return a + b + c;
 }
@@ -9,8 +9,10 @@ sum(1, null, null)
 传值必须传入的是undefined或者不传 才会取默认值
 ```
 ---
+
 ##### ...展开运算符
-```
+
+```js
 作为函数的参数使用
 function sum(...args) {
     let sum = 0;
@@ -19,11 +21,13 @@ function sum(...args) {
     }
     return sum;
 }
-> 对象展开
+
 ```
 ---
+
 #####  数组展开
- ```
+
+ ```js
  ...arr     ES6
 对象展开 ...obj     ES7 
 const arr = [1, 2, 3, 4, 5, 6,];
@@ -38,7 +42,8 @@ arra == arr  false
  ---
 
  ##### 对象展开
- ```
+
+ ```js
  浅克隆，obj1.age===obj2.age
  const obj1 = {
      a : 'name',
@@ -52,8 +57,10 @@ arra == arr  false
  ```
 
  ---
+
  ##### test
- ```
+
+ ```js
  function getNum(n) {
     let arr = [];
     for (let i = 0; i < n; i++) {
@@ -64,9 +71,12 @@ arra == arr  false
 const num = getNum(10);
 console.log(Math.max(...num),Math.min(...num), num);
  ```
+
  ---
- ##### 柯里化 用固定的某个函数的前面的参数，得到一个新的函数，新的函数调用时，接受剩余的参数  
- ```
+
+ ##### 柯里化 用固定的某个函数的前面的参数，得到一个新的函数，新的函数调用时，接受剩余的参数 
+
+ ```js
  function cal(a, b, c, d) {
     return a + b * c - d;
 }
@@ -85,10 +95,14 @@ function curry(fn, ...args){
 const newCal = curry(cal, 1, 2);
 console.log(newCal(3, 4))
  ```  
+
 ---
+
 ##### 判断是否使用了new的方式来调用函数
-> new.target 得到的是：如果没有使用new来调用函数，得到的是undefined,如果使用了new来调用函数，得到的是new后面函数关键字本身
-```
+
+new.target 得到的是：如果没有使用new来调用函数，得到的是undefined,如果使用了new来调用函数，得到的是new后面函数关键字本身
+
+```js
 function Person(name, age) {
     // new.target
     if(new.target === undefined) {
@@ -98,14 +112,20 @@ function Person(name, age) {
     this.age = age;
     console.log(new.target)
 }
+
 let oPerson = new Person('小王', 15);
+
 ```
+
  ---
+
  ##### 箭头函数 () => {}
+
  1. 通过对象调用函数，this指向对象
  2. 直接调用函数，this指向全局对象
  3. 通过new 调用， this指向新创建的对象
  4. 如果通过apply、call、bind， this指向指定的对象
  5. 如果是DOM事件，this指向DOM
+ 
  **通俗的来讲，this指向它父级最近有this的对象**
  
