--- a/ES6/函数.md
+++ b/ES6/函数.md
@@ -16,7 +16,7 @@ sum(1, null, null)
 作为函数的参数使用
 function sum(...args) {
     let sum = 0;
-    for(let i = 0; i < args.lenght; i ++) {
+    for(let i = 0; i < args.length; i ++) {
         sum += args;
     }
     return sum;
